prometheus/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: mon
  annotations:
    kubernets.io/ingress.class: "kong"
spec:
  tls:
  - hosts:
    - "*.realibox.cn"        #与secret证书的域名需要保持一致
    secretName: realibox-cn   #secret证书的名称
  rules:
  - host: prometheus.realibox.cn
    http:
      paths:
      - path:
        backend:
          serviceName: prometheus-service
          servicePort: 9090
